--- a/styles.css
+++ b/styles.css
@@ -4,19 +4,43 @@ nav {
   height: 50px;
 }
 
-.card-header {
-  background-color: green;
-}
 nav ul li {
   background-color: white !important;
 }
-.card {
-  background-image: url(media/bg.jpeg);
-}
+
 h1 {
   color: white;
   margin-left: 500px;
 }
 .label {
   color: white;
+}
+body {
+  background-color: whitesmoke;
+  background-image: url(media/Akan.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.box {
+  box-sizing: border-box;
+  background-color: cyan;
+  width: 300px;
+}
+p {
+  color: whitesmoke;
+}
+.dates {
+  text-align: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+footer {
+  background: darkblue !important;
+  width: 100%;
+  height: 50px;
+}
+.btn {
+  margin-bottom: 5px !important;
+  width: 200px;
+  border-radius: 1px !important;
 }
